# cage

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .rc  CLAUDE.md  Containerfile  DAILY_LOGGING_SUMMARY.md  DEBUG.md  DOCKER.md  Dockerfile  E2E_COMPLETION_SUMMARY.md  E2E_TEST_FIXES.md  END_TO_END_GUIDE.md  GEMINI.md  INTEGRATION_SUMMARY.md  ISOLATION_GUIDE.md  ISSUE-003-ANALYSIS.md  LOGROTATE_FIX_SUMMARY.md  Makefile  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_VERIFICATION_REPORT.md  POSTMAN_COLLECTION_GUIDE.md  POSTMAN_QUICK_START.md  README-agent-container.md  README.md  agent_daemon.py  agent_daemon_consolidated.py  app.py  cage-api-complete-postman-collection.json  conftest.py  coverage.xml  daemon.py  devbox.json  docker-compose.local.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.testing.yml  (+31 more)
.claude/: README.md  config.json  settings.local.json
.claude/commands/: resume-pickup.md  stash-pickup.md
.claude/skills/: pickup-stash-quickstart.md  pickup-stash.md
.codex/: config.json
.cursor/: argv.json  mcp.json  rules
.cursor/context/: entrypoint.md
.cursor/rules/: artisan-docker-container.mdc  conventional-commits-no-scope.md  conventional-commits-no-scope.mdc  external-context-management.md  notion-mcp-interaction.md  task-file-usage.mdc
.cursor/tasks/: 2025-08-19-example-task.md  2025-08-21-agent-base-dockerfile.md  2025-08-21-create-notion-mcp-cursor-rule.md
.scatchpad/cli-container/: Dockerfile  docker-compose.yml  run-cursor-container.sh  test.txt
.secrets/: .gitignore
agents/: __init__.py  actor_agent.py  base_agent.py  checker_agent.py  checker_agent_standalone.py  crew_manager.py  example_usage.py  validator_agent.py
config/: development.env  environment.example  production.env  testing.env
dockerfiles/: README.md  api  mcp  notes-app
dockerfiles/crew-api/: .dockerignore  Dockerfile
dockerfiles/files-api/: .dockerignore  Dockerfile
dockerfiles/git-api/: .dockerignore  Dockerfile
dockerfiles/lock-api/: .dockerignore  Dockerfile
dockerfiles/mcp/: Dockerfile
dockerfiles/rag-api/: .dockerignore  Dockerfile
docs/: README.md  api-design.md  cage-api-postman-collection.json  cli-reference.md  cli.md  repo-module.md  testing.md
docs/features/: README.md  crewai-integration.md  editor-tool.md  git-integration.md  task-manager.md
examples/: agent_usage_example.py
logging-stack/: DEPLOYMENT_SUMMARY.md  README.md  grafana-dashboard.json  grafana-datasource.json  setup-grafana.sh
logging-stack/logrotate/: Dockerfile  crontab  logrotate.conf  startup.sh
logging-stack/loki/: config.yml
logging-stack/promtail/: config.yml
manager/: __init__.py  spec_manager.py  task_manager.py
modules/: platform_manager.py  repo.py
nginx/: tasks.conf
notes/: git-tool-staging.md
repository1/: poem.txt
scenarios/: backend-blueprint.md  frontend-integration-plan.md  iterative-feature-refinement.md
scripts/: generate_status.py  init-db.sql  load-config.sh  migrate-to-daily-logs.py  pull-ollama-model.sh  run-tests.sh  setup-precommit.sh  start-mcp-server.py  start-mcp.sh  supervisor-control.sh  test-rag-system.py  validate_tasks.py
scripts/entrypoints/: sleep.sh
scripts/environments/: basic-echo.sh
src/: test_agent_file.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/api/: main.py
src/cage/: __init__.py  crew_tool.py  crew_tool_modular.py  editor_tool.py  embedding_adapters.py  git_tool.py  mcp_network_server.py  mcp_server.py  platform_manager.py  rag_service.py  repo.py  repo.py.backup  task_models.py
src/cli/: crew_cli.py  editor_cli.py  git_cli.py  main.py
src/crew_service/: __init__.py  bridges.py  main.py  middleware_request_id.py  router.py  run_engine.py
src/models/: __init__.py  crewai.py
tasks/: 2025-08-19-example-task.json  2025-08-21-agent-base-dockerfile.json  2025-08-22-align-context-entrypoint.json  2025-08-22-pytest-testing-standards.json  2025-08-22-verify-spec-slice.json  2025-08-23-add-task-manager-module.json  2025-08-23-consolidate-docker-compose.json  2025-08-23-switch-task-files-to-json.json  2025-08-24-move-manager-out-of-memory-bank.json  2025-08-25-clean-up-agent-daemon.json  2025-08-25-install-supervisor-container.json  2025-08-25-introduce-crewai-agents.json  2025-08-26-fix-devbox-pytest-service.json  2025-08-27-cli-user-friendly-selection.json  2025-08-27-fix-docker-build.json  2025-08-27-implement-close-lifecycle.json  2025-08-27-implement-merge-lifecycle.json  2025-08-27-update-gemini-md.json  2025-08-28-fix-platform-test-suite.json  2025-08-29-add-actor-mcp-tool.json  2025-09-07-example-task.json  2025-09-07-redefine-cage-as-service.json  2025-09-07-refactor-cli-to-api-service.json  2025-09-08-cli-api-test.json  2025-09-08-create-pytest-suite.json  2025-09-08-document-editor-tool.json  2025-09-08-phase1-task-file-system.json  2025-09-08-phase2-editor-tool.json  2025-09-08-phase3-git-integration.json  2025-09-08-phase4-crewai-integration.json  2025-09-08-phase5-rag-system.json  2025-09-08-phase6-production-features.json  2025-09-08-review-phase3-git-integration.json  2025-09-08-strip-down-for-new-cage-spec.json  2025-09-08-test-task.json  2025-09-08-workflow-test.json  2025-09-10-cli-api-test.json  2025-09-10-complete-testing-run.json  2025-09-10-fix-cors-errors.json  2025-09-10-fix-failing-tests.json  (+140 more)
tasks/_archived_tasks/: 2025-08-21-agent-base-dockerfile.json  2025-08-21-create-notion-mcp-cursor-rule.json  2025-08-22-add-cursor-rule-frontmatter.json  2025-08-22-agent-base-dockerfile.json  2025-08-22-split-spec.json  (+24 more)
tests/: __init__.py  conftest.py  run_tests.py  test_api.py  test_crew_smoke.py  test_editor_tool.py  test_repo_close_merge.py  test_repo_list_filter.py  test_repo_module.py  test_runner.py
traefik/: traefik.yml
(+114 files in other folders)
