[tool.poetry]
name = "cage"
version = "0.1.0"
description = "Pod-based Multi-Agent Repository Service"
authors = ["Cage Team <team@cage.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
typer = "^0.9.0"
rich = "^13.7.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
openai = "^1.3.7"
langchain = "^0.0.350"
pgvector = "^0.2.4"
crewai = "^0.1.0"
pyyaml = "^6.0.1"
httpx = "^0.25.2"
mcp = "~1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]